--- a/app/templates/catpics.html
+++ b/app/templates/catpics.html
@@ -82,13 +82,13 @@
 
             <div class="d-flex flex-column justify-content-center align-items-center gap-3">
                 <div class="text-center container">
-                    <img style="height: 40rem;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg" class="rounded" alt="...">
+                    <img style="height: 40rem;" src="{{caturl}}" class="rounded" alt="...">
                   </div>
                 
-                <div class="btn btn-light p-3">
-                    <div class="fs-6">
-                        Next Pic
-                    </div>
-                </div>
+                <a class="btn btn-light p-3" href="/catpics">
+                  <div class="fs-6">
+                      Next Pic
+                  </div>
+                </a>
             </div>
     </div>
