--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -160,7 +161,7 @@ function switchStations(){}
       <input type="text" placeholder="Add New Todo">
 
       <!--We can add the preexisting tasks here -->
-      <ul>
+      <ul id = "list">
         <li><span><i class="fa fa-trash"></i></span> Go To Maths Class</li>
         <li><span><i class="fa fa-trash"></i></span> Buy New Clothes</li>
         <li><span><i class="fa fa-trash"></i></span> Visit George</li>
@@ -168,11 +169,7 @@ function switchStations(){}
     </div>
     <style>
 
-              body {
-        background: -webkit-linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); }
-
-
-        ul {
+        #list {
         list-style: none;
         margin: 0;
         padding: 0;
@@ -246,15 +243,39 @@ function switchStations(){}
 
         <script>
           $(document).ready(function(){
+
             $("input[type='text']").keypress(function(event){
               if(event.which === 13){
 
                 var todoText = $(this).val();
                 $(this).val("");
 
-                $("ul").append("<li><span><i class='fa fa-trash'></i></span> " + todoText + "</li>")
+                $("#list").append("<li><span><i class='fa fa-trash'></i></span> " + todoText + "</li>")
             }
-          });
+            });
+
+            $("ul").on("click", "li", function(){
+	            $(this).toggleClass("completed");
+            });
+
+            $(".fa-plus").click(function(){
+	            $("input[type='text']").fadeToggle();
+            });  
+
+            $("ul").on("click", "span", function(event){
+	            $(this).parent().fadeOut(500,function(){
+		            $(this).remove();
+	            });
+	            event.stopPropagation();
+            });
+
+            window.addEventListener("beforeunload", function(event) {
+              console.log("WHY DONT YOU SHOW UP");
+              //event.preventDefault();
+              event.returnValue = null; //"Any text"; //true; //false;
+              //return null; //"Any text"; //true; //false;
+            });
+
           });
 
         </script>
