--- a/app/templates/trivia.html
+++ b/app/templates/trivia.html
@@ -85,19 +85,19 @@
             </div>
 
             <div class="d-flex flex-column gap-2 py-2">
-              <div class="answer rounded-3" data-value="1">
+              <div class="answer rounded-3" id="a" data-value="1">
                   <h3>A1</h3>
                 </div>
 
-                <div class="answer rounded-3" data-value="2">
+                <div class="answer rounded-3" id="b" data-value="2">
                   <h3>A2</h3>
                 </div>
 
-                <div class="answer rounded-3" data-value="3">
+                <div class="answer rounded-3" id="c" data-value="3">
                   <h3>A3</h3>
                 </div>
 
-                <div class="answer rounded-3" data-value="3">
+                <div class="answer rounded-3" id="d" data-value="3">
                   <h3>A4</h3>
                 </div>
             </div>
@@ -110,6 +110,42 @@
               }
               document.getElementById("q").innerHTML = decodeHtml("{{question}}")
             </script>
+
+<script>
+  function decodeHtml(s) {
+    var line = document.createElement("textarea");
+    line.innerHTML = s;
+    return line.value;
+  }
+  document.getElementById("a").innerHTML = decodeHtml("{{question}}")
+</script>
+
+<script>
+  function decodeHtml(s) {
+    var line = document.createElement("textarea");
+    line.innerHTML = s;
+    return line.value;
+  }
+  document.getElementById("b").innerHTML = decodeHtml("{{question}}")
+</script>
+
+<script>
+  function decodeHtml(s) {
+    var line = document.createElement("textarea");
+    line.innerHTML = s;
+    return line.value;
+  }
+  document.getElementById("c").innerHTML = decodeHtml("{{question}}")
+</script>
+
+<script>
+  function decodeHtml(s) {
+    var line = document.createElement("textarea");
+    line.innerHTML = s;
+    return line.value;
+  }
+  document.getElementById("d").innerHTML = decodeHtml("{{question}}")
+</script>
 
           </div>
     </div>
