--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,11 +10,12 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="tasks.js"></script>
     <title>Home</title>
 </head>
 
 <!-- YouTube Video Background -->
+
+<body>
 
 <div style="position: fixed; inset: 0px; display: flex; align-items: center; justify-content: center; z-index: -3; background: black;" class="yt-wrapper">
     <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; border-radius: 8px; z-index: -2;">
@@ -236,44 +237,6 @@ function switchStations(){}
 
         </style>
 
-        <script>
-          $(document).ready(function(){
-
-            $("input[type='text']").keypress(function(event){
-              if(event.which === 13){
-
-                var todoText = $(this).val();
-                $(this).val("");
-
-                $("#list").append("<li><span><i class='fa fa-trash'></i></span> " + todoText + "</li>")
-            }
-            });
-
-            $("ul").on("click", "li", function(){
-	            $(this).toggleClass("completed");
-            });
-
-            $(".fa-plus").click(function(){
-	            $("input[type='text']").fadeToggle();
-            });
-
-            $("ul").on("click", "span", function(event){
-	            $(this).parent().fadeOut(500,function(){
-		            $(this).remove();
-	            });
-	            event.stopPropagation();
-            });
-
-            window.addEventListener("beforeunload", function(event) {
-              console.log("#list");
-              //event.preventDefault();
-              event.returnValue = null; //"Any text"; //true; //false;
-              //return null; //"Any text"; //true; //false;
-            });
-
-          });
-
-        </script>
   </div>
 
 
@@ -285,6 +248,8 @@ function switchStations(){}
       </audio>
     </div>
   </nav> -->
+
+  <script src="../static/js/tasks.js"></script>
 
 </body>
 
