--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,22 +17,19 @@
 
 <body>
 
-<div style="position: fixed; inset: 0px; display: flex; align-items: center; justify-content: center; z-index: -3; background: black;" class="yt-wrapper">
-    <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; border-radius: 8px; z-index: -2;">
-        <div style="width: 100%; height: 100%; z-index: -1;">
-          <iframe allowfullscreen="1" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="【24/7 CHILL LOFI HIP HOP RADIO】beats to sleep/relax/study to" src="https://www.youtube.com/embed/qH3fETPsqXU?autoplay=1&mute=0&controls=0&origin=http://127.0.0.1:5000&playsinline=1&showinfo=0&rel=0&iv_load_policy=3&modestbranding=true&color=black&enablejsapi=0&widgetid=1&amp;wmode=transparent" id="widget2" width="100%" height="100%" frameborder="0">></iframe>
+<div style="position: fixed; inset: 0px; display: flex; align-items: center; justify-content: center; background: black; opacity:0.1;" class="yt-wrapper">
+    <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; border-radius: 8px; opacity:0.1;">
+        <div style="width: 100%; height: 100%;">
+          <iframe id="youtubeVid" allowfullscreen="1" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="【24/7 CHILL LOFI HIP HOP RADIO】beats to sleep/relax/study to" src="https://www.youtube.com/embed/qH3fETPsqXU?autoplay=1&mute=0&controls=0&origin=http://127.0.0.1:5000&playsinline=1&showinfo=0&rel=0&iv_load_policy=3&modestbranding=true&color=black&enablejsapi=0&widgetid=1&amp;wmode=transparent" id="widget2" width="100%" height="100%" frameborder="0">></iframe>
         </div>
       </div>
 </div>
 
 <!-- GIFs Background -->
-<div style="background-size: 100%; height: 100%; width: 100%; background-image: url('{{gif}}');"></div>
+<body style="background-size: 100% 100%; height: 100%; width: 100%; background-image: url('{{gif}}'); height: 100vh;">
 <!-- <img style="position: absolute; width: 100vw; height: 100vh; top: 0px; left: 0px; object-fit: cover; z-index: 0; background"> -->
 
-<script>
 
-function switchStations(){}
-</script>
 
 <!-- <button type="button" onclick="switchStations();">
   Lo-fi Stations
@@ -145,8 +142,6 @@ function switchStations(){}
           Switch to Work/Break
         </button>
       </div>
-
-
     </div>
   </div>
 
@@ -236,18 +231,16 @@ function switchStations(){}
         }
 
         </style>
-
   </div>
 
 
-  <!-- Radio -->
-  <!-- <nav class="navbar fixed-bottom">
-    <div class="container-fluid">
-      <audio controls class="bg-light rounded-3" style="opacity:85%">
-        <source src={{audio}} type="audio/mpeg">
-      </audio>
+  <div class="mt-3 mx-2 row justify-content-end">
+    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%; height: 100px; width: 100px;">
+      <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
+        <button type="button" action="">Click Me!</button>
+      </div>
     </div>
-  </nav> -->
+  </div>
 
   <script src="../static/js/tasks.js"></script>
 
