--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
 <div style="position: fixed; inset: 0px; display: flex; align-items: center; justify-content: center; background: black; opacity:0.1;" class="yt-wrapper">
     <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; border-radius: 8px; opacity:0.1;">
         <div style="width: 100%; height: 100%;">
-          <iframe id="youtubeVid" allowfullscreen="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="【24/7 CHILL LOFI HIP HOP RADIO】beats to sleep/relax/study to" src="https://www.youtube.com/embed/qH3fETPsqXU?autoplay=1&mute=0&controls=0&origin=http://127.0.0.1:5000&playsinline=1&showinfo=0&rel=0&iv_load_policy=3&modestbranding=true&color=black&enablejsapi=0&widgetid=1&amp;wmode=transparent" id="widget2" width="100%" height="100%" frameborder="0">></iframe>
+          <iframe id="player" allowfullscreen="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="【24/7 CHILL LOFI HIP HOP RADIO】beats to sleep/relax/study to" src="https://www.youtube.com/embed/qH3fETPsqXU?autoplay=1&mute=0&controls=0&origin=http://127.0.0.1:5000&playsinline=1&showinfo=0&rel=0&iv_load_policy=3&modestbranding=true&color=black&enablejsapi=0&widgetid=1&amp;wmode=transparent" id="widget2" width="100%" height="100%" frameborder="0">></iframe>
         </div>
       </div>
 </div>
@@ -94,7 +94,7 @@
       if (!isOn) {
         interval = setInterval(timer, 1000);
         isOn = true;
-      } 
+      }
     }
     function pauseTimer(){
       if (isOn) {
@@ -242,14 +242,15 @@
 
 
   <div class="mt-3 mx-2 row justify-content-end">
-    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%; height: 100px; width: 100px;">
+    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%;">
       <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
-        <button type="button" action="">Click Me!</button>
+        <button type="button" action="">Pause</button>
       </div>
     </div>
   </div>
 
-  <script src="../static/js/tasks.js"></script>
+<script src="../static/js/tasks.js"></script>
+<script src="../static/player.js"></script>
 
 </body>
 
