--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,9 @@
 <div style="position: fixed; inset: 0px; display: flex; align-items: center; justify-content: center; background: black; opacity:0.01;" class="yt-wrapper">
     <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; border-radius: 8px; opacity:0.01;">
         <div style="width: 100%; height: 145%;">
-                <iframe id="player" allow="autoplay;" title="【24/7 CHILL LOFI HIP HOP RADIO】beats to sleep/relax/study to" src="https://www.youtube.com/embed/qH3fETPsqXU?autoplay=1&mute=0&controls=0&origin=http://127.0.0.1:5000&playsinline=1&showinfo=0&rel=0&modestbranding=1&color=black&enable&amp;wmode=transparent" id="widget2" width="100%" height="100%" frameborder="0" donotallowfullscreen>></iframe>
+                <iframe id="player" allow="autoplay;"
+                src="https://www.youtube.com/embed/qH3fETPsqXU?autoplay=1&mute=0&controls=0&playsinline=1&showinfo=0&rel=0&modestbranding=1&color=black&enable&amp;wmode=transparent"
+                width="100%" height="100%" frameborder="0" donotallowfullscreen>></iframe>
         </div>
       </div>
 </div>
@@ -246,7 +248,15 @@
   <div class="mt-3 mx-2 row justify-content-end">
     <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%;">
       <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
-        <button type="button" action="">Pause</button>
+        <button type="button" onclick="pause()">Pause</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-3 mx-2 row justify-content-end">
+    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%;">
+      <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
+        <button type="button" action=""> Switch Station 📻 </button>
       </div>
     </div>
   </div>
