--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,15 +17,13 @@
 
 <body>
 
-
-
-<div style="position: fixed; inset: 0px; display: flex; align-items: center; justify-content: center; background: black; opacity:0.01;" class="yt-wrapper">
-    <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; border-radius: 8px; opacity:0.01;">
-        <div style="width: 100%; height: 145%;">
-                <iframe id="player" allow="autoplay;" title="【24/7 CHILL LOFI HIP HOP RADIO】beats to sleep/relax/study to" src="https://www.youtube.com/embed/qH3fETPsqXU?autoplay=1&mute=0&controls=0&origin=http://127.0.0.1:5000&playsinline=1&showinfo=0&rel=0&modestbranding=1&color=black&enable&amp;wmode=transparent" id="widget2" width="100%" height="100%" frameborder="0" donotallowfullscreen>></iframe>
+  <div style="position: fixed; inset: 0px; display: flex; align-items: center; justify-content: center; background: black; opacity:0.01;" class="yt-wrapper">
+      <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; border-radius: 8px; opacity:0.01;">
+          <div style="width: 100%; height: 145%;">
+                  <iframe id="player" allow="autoplay;" title="【24/7 CHILL LOFI HIP HOP RADIO】beats to sleep/relax/study to" src="https://www.youtube.com/embed/qH3fETPsqXU?autoplay=1&mute=0&controls=0&origin=http://127.0.0.1:5000&playsinline=1&showinfo=0&rel=0&modestbranding=1&color=black&enable&amp;wmode=transparent" id="widget2" width="100%" height="100%" frameborder="0" donotallowfullscreen>></iframe>
+          </div>
         </div>
-      </div>
-</div>
+  </div>
 
 <!-- GIFs Background -->
 <body style="background-size: 100% 100%; height: 100%; width: 100%; background-image: url('{{gif}}'); height: 100vh;">
@@ -33,7 +31,7 @@
 
 
 
-<!-- <button type="button" onclick="switchStations();">
+<!-- <button type="button" onclick  ="switchStations();">
   Lo-fi Stations
 </button> -->
 
@@ -49,12 +47,12 @@
       <div class="collapse navbar-collapse justify-content-end " id="navbarNav">
         <ul class="navbar-nav gap-2">
           <li class="nav-item">
-            <a class="nav-link btn btn-light btn-sm justify-content-center align-items-center" style="opacity: 0.8;" aria-current="page" href="#">
+            <a class="nav-link btn btn-light btn-sm justify-content-center align-items-center" style="opacity: 0.8;" aria-current="page" onclick="toggle('timeToSleep');">
                 <img src="../static/assets/reshot-icon-minimal-timer-RLEU6FQHW5.svg" width="25px" height="25px" alt="">
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-light btn-sm" style="opacity: 0.8;" href="#">
+            <a class="nav-link btn btn-light btn-sm" style="opacity: 0.8;" onclick="toggle('listYourPets');">
                 <img src="../static/assets/reshot-icon-list-S4CW5TRAZY.svg" width="25px" height="25px" alt="">
             </a>
           </li>
@@ -74,61 +72,23 @@
     </div>
   </nav>
 
+  <!-- Toggle Button Functions -->
+  <script>
+    function toggle(id) {
+      var x = document.getElementById(id);
+      if (x.style.display == "none") {
+        x.style.display = "initial";
+      } else {
+        x.style.display = "none";
+      }
+    }
+  </script>
+
 
 <!-- POMODORO TIMER -->
 
-<!-- Javascript for timer -->
-<script>
-    var time = 1500;
-    var isOn = false;
-    var restTime = false;
-    let interval;
-
-    function timer() {
-      if(time > 0) {
-        time--;
-        document.getElementById('displayTime').innerHTML = formatTime(time);
-      } else {
-        clearInterval(interval);
-      }
-    }
-    function startTimer(){
-      if (!isOn) {
-        interval = setInterval(timer, 1000);
-        isOn = true;
-      }
-    }
-    function pauseTimer(){
-      if (isOn) {
-        interval = clearInterval(interval);
-        isOn = false;
-      }
-    }
-    function resetTimer(){
-      pauseTimer();
-      if(restTime) {
-        time = 300;
-      } else {
-        time = 1500;
-      }
-      document.getElementById('displayTime').innerHTML = formatTime(time);
-    }
-    function switchTimer(){
-      restTime = !(restTime);
-      resetTimer();
-    }
-    function formatTime(num){
-      const min = Math.floor(num/60);
-      const sec = num%60;
-      if (sec<10) {
-        return min + ":0" + sec;
-      } else {
-        return min + ":" + sec;
-      }
-    }
-</script>
-
   <!-- Display timer -->
+  <div id='timeToSleep'>
   <div class="mt-3 mx-2 row justify-content-end">
     <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%; height: 270px; width: 300px;">
       <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
@@ -153,9 +113,10 @@
       </div>
     </div>
   </div>
+  </div>
 
   <!-- To-Do List -->
-
+  <div id='listYourPets'>
   <div class="mt-3 mx-2 row justify-content-end">
     <div id="container" class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%; height: auto; width: 300px; margin-bottom: 10px;">
       <h1>To-Do List <i class="fa fa-plus"></i></h1>
@@ -241,18 +202,17 @@
 
         </style>
   </div>
-
-
-  <div class="mt-3 mx-2 row justify-content-end">
-    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%;">
-      <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
-        <button type="button" action="">Pause</button>
-      </div>
-    </div>
   </div>
+
+  <nav class="navbar fixed-bottom">
+    <div class="container-fluid">
+      <button type="button" class="navbar-brand btn btn-light btn-sm" onclick="">Play/Pause</button>
+    </div>
+  </nav>
 
 <script src="../static/js/tasks.js"></script>
 <script src="../static/player.js"></script>
+<script src="../static/js/timer.js"></script>
 
 </body>
 
