--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,13 +14,8 @@
 </head>
 
 <!-- YouTube Video Background -->
-
-<body>
-
-
-
-<div style="position: fixed; inset: 0px; display: flex; align-items: center; justify-content: center; background: black; opacity:0.01;" class="yt-wrapper">
-    <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; border-radius: 8px; opacity:0.01;">
+<div style="position: fixed; inset: 0px; display: flex; align-items: center; justify-content: center; background: black; opacity:0.8;" class="yt-wrapper">
+    <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; border-radius: 8px; opacity:0.8;">
         <div style="width: 100%; height: 145%;">
                 <iframe id="player" allow="autoplay;"
                 src="https://www.youtube.com/embed/qH3fETPsqXU?autoplay=1&mute=0&controls=0&playsinline=1&showinfo=0&rel=0&modestbranding=1&color=black&enable&amp;wmode=transparent"
@@ -31,14 +26,6 @@
 
 <!-- GIFs Background -->
 <body style="background-size: 100% 100%; height: 100%; width: 100%; background-image: url('{{gif}}'); height: 100vh;">
-<!-- <img style="position: absolute; width: 100vw; height: 100vh; top: 0px; left: 0px; object-fit: cover; z-index: 0; background"> -->
-
-
-
-<!-- <button type="button" onclick="switchStations();">
-  Lo-fi Stations
-</button> -->
-
 
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg ">
@@ -78,58 +65,6 @@
 
 
 <!-- POMODORO TIMER -->
-
-<!-- Javascript for timer -->
-<script>
-    var time = 1500;
-    var isOn = false;
-    var restTime = false;
-    let interval;
-
-    function timer() {
-      if(time > 0) {
-        time--;
-        document.getElementById('displayTime').innerHTML = formatTime(time);
-      } else {
-        clearInterval(interval);
-      }
-    }
-    function startTimer(){
-      if (!isOn) {
-        interval = setInterval(timer, 1000);
-        isOn = true;
-      }
-    }
-    function pauseTimer(){
-      if (isOn) {
-        interval = clearInterval(interval);
-        isOn = false;
-      }
-    }
-    function resetTimer(){
-      pauseTimer();
-      if(restTime) {
-        time = 300;
-      } else {
-        time = 1500;
-      }
-      document.getElementById('displayTime').innerHTML = formatTime(time);
-    }
-    function switchTimer(){
-      restTime = !(restTime);
-      resetTimer();
-    }
-    function formatTime(num){
-      const min = Math.floor(num/60);
-      const sec = num%60;
-      if (sec<10) {
-        return min + ":0" + sec;
-      } else {
-        return min + ":" + sec;
-      }
-    }
-</script>
-
   <!-- Display timer -->
   <div class="mt-3 mx-2 row justify-content-end">
     <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%; height: 270px; width: 300px;">
@@ -256,13 +191,45 @@
   <div class="mt-3 mx-2 row justify-content-end">
     <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%;">
       <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
-        <button type="button" action=""> Switch Station 📻 </button>
+        <button type="button" onclick="switchStations()" id="switchStations"> Switch Station 📻 </button>
       </div>
     </div>
   </div>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+
+<script type="text/javascript">
+
+function pause(){
+  console.log("got clicked.");
+  var frame = document.getElementById("player");
+  frame.contentWindow.postMessage('{"event": "command", "func": "pauseVideo", "args": ""}', '*');
+}
+
+function switchStations() {
+  // console.log("got clicked.");
+  var frame = document.getElementById("player");
+  frame.src = "https://www.youtube.com/embed/L1zoItQw_e4?controls=0&autoplay=1&mute=0";
+}
+
+
+$.getJSON("links.json", function(data) {
+        console.log(data);
+        // $('body').append(data.links[0].link);
+    });
+//
+// $(document).ready(function(){
+//   $("switchStations").click(function(){
+//     $("#player".src).load();
+//   });
+// });
+
+</script>
+
+<!-- LINKAGES -->
 <script src="../static/js/tasks.js"></script>
-<script src="../static/player.js"></script>
+<!-- <script src="../static/js/player.js"></script> -->
+<script src="../static/js/timer.js"></script>
 
 </body>
 
