--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,6 +22,7 @@
                 width="100%" height="100%" frameborder="0" donotallowfullscreen>></iframe>
         </div>
   </div>
+</div>
 
 <!-- GIFs Background -->
 <body style="background-size: 100% 100%; height: 100%; width: 100%; background-image: url('{{gif}}'); height: 100vh;">
@@ -210,7 +211,7 @@
         <button type="button" onclick="switchStations()" id="switchStations"> Switch Station 📻 </button>
       </div>
     </div>
-  </nav>
+  </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 
