--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -200,7 +200,15 @@
   <div class="mt-3 mx-2 row justify-content-end">
     <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%;">
       <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
-        <button type="button" onclick="onYouTubePlayerAPIReady()" id="pause-button">Pause</button>
+        <button type="button" onclick="pause()" id="pause-button">Pause</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-3 mx-2 row justify-content-end">
+    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%;">
+      <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
+        <button type="button" onclick="play()" id="play-button">Play</button>
       </div>
     </div>
   </div>
