--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -117,8 +117,8 @@
   <!-- To-Do List -->
   <div id='listYourPets'>
   <div class="mt-3 mx-2 row justify-content-end">
-    <div id="container" class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:90%; height: auto; width: 300px; margin-bottom: 10px;">
-      <h1 class="rounded-3" style="background: #c8b6ff;">To-Do List <i class="fa fa-plus"></i></h1>
+    <div id="container" class="p-3 d-flex flex-column align-items-left gap-3 bg-light rounded-3 border" style="opacity:90%; height: auto; width: 300px; margin-bottom: 10px;">
+      <h1 class="rounded-3" style="background: #c8b6ff; text-align: center;">To-Do List <i class="fa fa-plus"></i></h1>
       <input type="text" placeholder="Add New Todo">
 
       <!--We can add the preexisting tasks here -->
@@ -162,6 +162,7 @@
         height: 40px;
         line-height: 40px;
         color: #666;
+        font-size: 18px;
         }
 
         li:nth-child(2n){
@@ -170,7 +171,7 @@
 
         span {
         background: #e74c3c;
-        height: 40px;
+        height: 18px;
         margin-right: 20px;
         text-align: center;
         color: white;
