--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -57,7 +57,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link btn btn-light btn-sm" style="opacity: 0.8;" href="/login">
-                <img src="../static/assets/reshot-icon-leaderboard-2ZS8JETV4N.svg" width="25px" height="25px" alt="">
+                <img src="../static/assets/reshot-icon-sign-in-9ZRS6NMFWD.svg" width="25px" height="25px" alt="">
             </a>
           </li>
           <!-- <li class="nav-item">
@@ -115,9 +115,9 @@
   </div> <!--End of Timer-->
 
   <!-- To-Do List -->
-  <div id='listYourPets'>
+  <div id='listYourPets' >
   <div class="mt-3 mx-2 row justify-content-end">
-    <div id="container" class="p-3 d-flex flex-column align-items-left gap-3 bg-light rounded-3 border" style="opacity:90%; height: auto; width: 300px; margin-bottom: 10px;">
+    <div id="container" class="p-3 d-flex flex-column align-items-left gap-3 bg-light rounded-3 border" style="overflow:scroll; opacity:90%; height: 300px; width: 300px; margin-bottom: 10px;">
       <h1 class="rounded-3" style="background: #c8b6ff; text-align: center;">To-Do List <i class="fa fa-plus"></i></h1>
       <input type="text" placeholder="Add New Todo">
 
@@ -171,7 +171,7 @@
 
         span {
         background: #e74c3c;
-        height: 18px;
+        height: 40px;
         margin-right: 20px;
         text-align: center;
         color: white;
