--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,7 +27,7 @@
 </div>
 
 <!-- GIFs Background -->
-<body style="background-size: 100% 100%; height: 100%; width: 100%; background-image: url('{{gif}}'); height: 100vh;">
+<body style="background-size: 100% 140%; height: 100vh; width: 100%; background-image: url('{{gif}}');">
 <!-- <img style="position: absolute; width: 100vw; height: 100vh; top: 0px; left: 0px; object-fit: cover; z-index: 0; background"> -->
 
   <!-- NAVBAR -->
